--- a/index.html
+++ b/index.html
@@ -16,37 +16,38 @@
                 <a href="#welcome-section">About</a>
             </li>
             <li>
-                <a href="#projects-section">Projects</a>
+                <a href="#projects">Projects</a>
                 
             </li>
             <li>
-                <a href="#work-section">Work</a>
+                <a href="#contact-section">Contact</a>
             </li>
         </ul>
     </nav>
 
     <section id="welcome-section" class="welcome-section">
-        <h1<>Howdy I'm Alex Strasburg</h1>
+        <h1>Howdy I'm Alex Strasburg</h1>
         <h3>I'm an Awesome Web Designer</h3>
     </section>
-<section id="projects-section" class="projects-section">
+<section id="projects" class="project-title">
     <h1>These are some of my projects</h1>
-    <div id ="project-list">
+    <div id="project-list">
         <a href="../StarwarsProject/index.html" target="_blank">
 <figure class="project-title">
-    <img src="/images/star-wars-ray.jpeg" alt="Star Wars Ray">
+    <img src="/images/star-wars-ray.jpeg" alt="Star Wars Ray" />
     <figcaption>A Star Wars Ray</figcaption>
 </figure></a>
-<figure class="project-title">
-    <img src="/images/uvu-logo.svg" alt="UVU Logo">
+<a href="http://uvu.edu"><figure class="project-title">
+    <img src="/images/uvu-logo.svg" alt="UVU Logo" />
     <figcaption>UVU is a Great School</figcaption>
-</figure>
-<figure class="project-title">
-    <img src="/images/uvu-logo.svg" alt="UVU Logo">
-    <figcaption>Placeholder</figcaption>
-</figure>
+</figure></a>
+<a href="http://uvu.edu"><figure class="project-title">
+    <img src="/images/uvu-logo.svg" alt="UVU Logo" />
+    <figcaption>UVU is a Great School</figcaption>
+</figure></a>
+</div>
 </section>
-<section id="work-section">
+<section id="contact-section">
     <a id="profile-link"href="https://github.com/strasbal" target="_blank" id="profile-link"> 
 <i class="fab fa-github">Github</i>
 </a>
