--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alex's Personal Portfolio</title>
     <script src="https://kit.fontawesome.com/9e39b64f94.js" crossorigin="anonymous"></script>
-    <link  rel="stylesheet" type="text/css" href='/style.css'>
+    <link  rel="stylesheet" type="text/css" href='/style.css' />
 </head>
 
 <body>
@@ -29,13 +29,13 @@
         <h1>Howdy I'm Alex Strasburg</h1>
         <h3>I'm an Awesome Web Designer</h3>
     </section>
-<section id="projects" class="project-title">
+<section id="projects">
     <h1>These are some of my projects</h1>
     <div id="project-list">
         <a href="../StarwarsProject/index.html" target="_blank">
 <figure class="project-title">
-    <img src="/images/star-wars-ray.jpeg" alt="Star Wars Ray" />
-    <figcaption>A Star Wars Ray</figcaption>
+    <img src="/images/star-wars-ray.jpg" alt="Star Wars Poster " />
+    <figcaption>My Star Wars Page</figcaption>
 </figure></a>
 <a href="http://uvu.edu"><figure class="project-title">
     <img src="/images/uvu-logo.svg" alt="UVU Logo" />
@@ -47,19 +47,20 @@
 </figure></a>
 </div>
 </section>
-<section id="contact-section">
-    <a id="profile-link"href="https://github.com/strasbal" target="_blank" id="profile-link"> 
-<i class="fab fa-github">Github</i>
-</a>
-<a id="profile-link" href="https://github.com/strasbal" target="_blank" id="profile-link"> 
-<i class="fab fa-facebook contact"></i> Facebook</a>
-<a class="link" href="https://github.com/strasbal" target="_blank" id="profile-link"> 
-<i class="fab fa-linkedin contact"></i> Linked-in</a>
-<a class="link" href="https://github.com/strasbal" target="_blank" id="profile-link"> 
-<i class="fas fa-at contact"></i>Email</a>
-<a class="link" href="https://github.com/strasbal" target="_blank" id="profile-link"> 
-<i class="fas fa-phone contact"></i> Phone</a>
+<section id="contact">
+    <div id="contact-rules">
+<a id="profile-link" href="https://github.com/strasbal" target="_blank"><i class="fab fa-github"></i></a>
+<a href="https://github.com/strasbal" target="_blank"> 
+<i class="fab fa-facebook contact"></i></a>
+<a class="link" href="https://github.com/strasbal" target="_blank" > 
+<i class="fab fa-linkedin contact"></i></a>
+<a class="link" href="https://github.com/strasbal" target="_blank"> 
+<i class="fas fa-at contact"></i></a>
+<a class="link" href="https://github.com/strasbal" target="_blank"> 
+<i class="fas fa-phone contact"></i></a>
+</div>
 </section>
+    
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <p>&copy; Strasburg Media 2020 for education purposes only.</p>
 </body>
