--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="project-list">
         <a href="../StarwarsProject/index.html" target="_blank">
 <figure class="project-title">
-    <img src="/images/star-wars-ray.jpeg" alt="Star Wars Poster " />
+    <img src="/images/star-wars-ray.jpg" alt="Star Wars Poster " />
     <figcaption>My Star Wars Page</figcaption>
 </figure></a>
 <a href="http://uvu.edu"><figure class="project-title">
