added millenium falcon

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <img src="/images/uvu-logo.svg" alt="UVU Logo" />
     <figcaption>UVU is a Great School</figcaption>
 </figure></a>
-<a href="http://uvu.edu"><figure class="project-title">
-    <img src="/images/uvu-logo.svg" alt="UVU Logo" />
-    <figcaption>UVU is a Great School</figcaption>
+<a href="/StarwarsProject/starships/index.html" target="_blank"><figure class="project-title">
+    <img src="/images/falcon.jpg" alt="Millenium Falcon" />
+    <figcaption>My Starships Page</figcaption>
 </figure></a>
 </div>
 </section>
@@ -61,7 +61,6 @@
 </div>
 </section>
     
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <p>&copy; Strasburg Media 2020 for education purposes only.</p>
 </body>
 </html>
