--- a/StarwarsProject/starships/index.html
+++ b/StarwarsProject/starships/index.html
@@ -19,7 +19,7 @@
               <!-- Any other Bulma elements you want -->
               <div class="card">
                 <div class="card-content"></div>
-                <h2 class="dialogMessage"></h2>
+                <h2 class="dialogMessage is-size-2"></h2>
                     </div>
                 </div>
             </div>
@@ -37,7 +37,7 @@
 </ul>
     </nav>
 <main id="main">
-    
+   <div class="shipview"></div> 
     </main>
 </div>
     <footer>
