--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <figcaption>My Starships Page</figcaption>
 </figure></a>
 <a href="/congress/index.html" target="_blank"><figure class="project-title">
-    <img src="/congress/images/capital.jpg" alt="Capital" />
+    <img src="/images/congress.jpg" alt="Capital" />
     <figcaption>My Congress Page</figcaption>
 </figure></a>
 </div>
