Updated Pokemon to match Thortek

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
     <img src="/images/congress.jpg" alt="Capital" />
     <figcaption>My Congress Page</figcaption>
 </figure></a>
+<a href="/Pokemon/index.html" target="_blank"><figure class="project-title">
+    <img src="/images/pokemon.jpg" alt="Pokemon" />
+    <figcaption>Pokemon Baseball Cards</figcaption>
+</figure></a>
 </div>
 </section>
 <section id="contact">
