error figuring pokemon. need to copy thortek fix.

--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -16,7 +16,8 @@
 </div>
     </main>
     <footer>
-
+<button id="startButton">Get Started</button>
+<button id="newButton">Pokemon</button>
     </footer>
     <script src="index.js" type="module"></script>
 </body>
