--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="/Pokemon/style.css" rel="stylesheet">
     <title>Pokemon Cards!</title>
 </head>
 <body>
     <header>
         <h1>Gotta Catch 'em All!</h1>
+        <div>
+        <button id="startButton">Get Started!</button>
+        <button id="newButton">New Pokemon!</button>
+        </div>
     </header>
     <main>
 <div class="pokeContainer">
@@ -16,9 +20,8 @@
 </div>
     </main>
     <footer>
-<button id="startButton">Get Started</button>
-<button id="newButton">Pokemon</button>
+    <footer>
     </footer>
-    <script src="index.js" type="module"></script>
+    <script src="/Pokemon/index.js" type="module"></script>
 </body>
 </html>
