chaos mode disabled

--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -12,7 +12,7 @@
         <div>
         <button id="startButton">Get Started!</button>
         <button id="newButton">New Pokemon!</button>
-        <button id="chaosMode">Chaos Mode!</button>
+<!---        <button id="chaosMode">Chaos Mode!</button> -->
         </div>
     </header>
     <main>
